@@ -18,4 +18,14 @@
  */
 
 #include "jump-list.h"
+
+JumpList::JumpList(QObject *parent) :
+		QObject{parent}
+{
+}
+
+JumpList::~JumpList()
+{
+}
+
 #include "jump-list.moc"
